--- a/default/km/settings.json
+++ b/default/km/settings.json
@@ -12,6 +12,11 @@
       "disabled": false
     },
     {
+      "entityType": "ce_city",
+      "defaultFieldEligibilityGroup": "ce_city.default",
+      "disabled": false
+    },
+    {
       "entityType": "job",
       "disabled": true
     },
@@ -46,6 +51,16 @@
     {
       "entityType": "organization",
       "disabled": true
+    },
+    {
+      "entityType": "ce_state",
+      "defaultFieldEligibilityGroup": "ce_state.default",
+      "disabled": false
+    },
+    {
+      "entityType": "ce_root",
+      "defaultFieldEligibilityGroup": "ce_root.default",
+      "disabled": false
     },
     {
       "entityType": "helpArticle",
